--- a/public/styles/styling.css
+++ b/public/styles/styling.css
@@ -47,9 +47,21 @@ a {
   align-content: center;
 }
 
+#legendSvg {
+  width: 20%;
+}
+
+#mapSvg {
+  width: 60%;
+}
+
+#detailSvg {
+  width: 20%;
+}
+
 svg {
-  width: 1000px;
-  height: 500px;
+  height: 32.5em;
+  background-color: #c4faff;
 }
 
 circle {
