--- a/public/styles/styling.css
+++ b/public/styles/styling.css
@@ -62,13 +62,13 @@ a {
 
 #detailSection {
   width: 20%;
-  background-color: #c4faff;
+  background-color: #d5eefd;
   height: 32.5em;
 }
 
 svg {
   height: 32.5em;
-  background-color: #c4faff;
+  background-color: #d5eefd;
 }
 
 circle {
