--- a/public/styles/styling.css
+++ b/public/styles/styling.css
@@ -12,11 +12,24 @@ body {
 h1 {
   text-align: center;
   font-weight: 700;
+  margin: .5em 0;
 }
 
 h2 {
   text-align: center;
   font-weight: 600;
+  margin: .5em 0;
+}
+
+header {
+  margin: 0.5em 0;
+}
+
+header p {
+  font-size: .8em;
+  font-style: italic;
+  margin: .25em 0;
+  text-align: center;
 }
 
 a {
@@ -62,8 +75,13 @@ a {
 
 #detailSection {
   width: 20%;
-  background-color: #d5eefd;
-  height: 32.5em;
+  padding: 1em;
+  background-color: #b8e5ff;
+  height: 30.5em;
+}
+
+#detailSection p:first-of-type {
+  font-weight: 700;
 }
 
 svg {
